// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SARIF golden output mixed Semgrep + Trivy session 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "runs": [
    {
      "invocations": [
        {
          "endTimeUtc": "2026-01-01T00:00:00.000Z",
          "executionSuccessful": true,
          "startTimeUtc": "2026-01-01T00:00:00.000Z",
        },
      ],
      "results": [
        {
          "fingerprints": {
            "aegis/v1": "a1b2c3d4e5f6",
          },
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/auth.ts",
                },
                "region": {
                  "startLine": 42,
                },
              },
            },
          ],
          "message": {
            "text": "Hardcoded JWT secret",
          },
          "ruleId": "semgrep/jwt-hardcoded-secret",
        },
        {
          "fingerprints": {
            "aegis/v1": "f6e5d4c3b2a1",
          },
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "src/auth.ts",
                },
                "region": {
                  "endLine": 90,
                  "startLine": 87,
                },
              },
            },
          ],
          "message": {
            "text": "SQL injection via string concat",
          },
          "ruleId": "semgrep/sql-injection",
        },
        {
          "fingerprints": {
            "aegis/v1": "g7h8i9j0k1l2",
          },
          "level": "error",
          "message": {
            "text": "Lodash command injection",
          },
          "properties": {
            "package": "lodash",
          },
          "ruleId": "CVE-2021-23337",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/RohiRIK/aegis-security-agent",
          "name": "aegis-security-agent",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "id": "semgrep/jwt-hardcoded-secret",
              "shortDescription": {
                "text": "Hardcoded JWT secret",
              },
            },
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "id": "semgrep/sql-injection",
              "shortDescription": {
                "text": "SQL injection via string concat",
              },
            },
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "id": "CVE-2021-23337",
              "shortDescription": {
                "text": "Lodash command injection",
              },
            },
          ],
          "semanticVersion": "0.3.0",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`SARIF golden output empty session — valid SARIF with no results 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "runs": [
    {
      "invocations": [
        {
          "endTimeUtc": "2026-01-01T00:00:00.000Z",
          "executionSuccessful": true,
          "startTimeUtc": "2026-01-01T00:00:00.000Z",
        },
      ],
      "results": [],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/RohiRIK/aegis-security-agent",
          "name": "aegis-security-agent",
          "rules": [],
          "semanticVersion": "0.3.0",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`SARIF golden output legacy events — gracefully skipped 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/RohiRIK/aegis-security-agent",
          "name": "aegis-security-agent",
          "rules": [],
          "semanticVersion": "0.3.0",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;
